サンプル名は、buttercake

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     build: ./data/htdocs
     environment:
       TZ: "Asia/Tokyo"
-      PRJ: "sample"
+      PRJ: "buttercake"
     volumes:
       - "./data/htdocs:/root"
     ports:
